# LungTissues

./: .gitignore  CourseWork.md  README.md  download.sbatch  pyproject.toml
scripts/LungTissues/annotate/: annotate.sbatch  main.py
scripts/LungTissues/download/: main.py
scripts/LungTissues/evaluate/: README.md  main.py  (+2 more)
scripts/MNIST/: 2d.py  2d_plot_models.ipynb  3d.py  3d_full_liquid_baseline.sbatch  3d_full_liquid_conf0.sbatch  3d_full_liquid_conf1.sbatch  3d_full_liquid_conf2.sbatch  3d_plot_models.ipynb  3dexp1.ipynb  README.md  datasets_adrenal.ipynb  datasets_nodule.ipynb  datasets_vessel.ipynb  exp1_adrenal.ipynb  exp1_nodule.ipynb  exp1_vessel.ipynb  exp2_adrenal.ipynb  exp2_nodule.ipynb  exp2_vessel.ipynb  exp3_adrenal.ipynb  exp3_nodule.ipynb  exp3_vessel.ipynb  exp4_adrenal.ipynb  exp4_nodule.ipynb  exp4_vessel.ipynb  exp5_adrenal.ipynb  exp5_nodule.ipynb  exp5_vessel.ipynb  full_report_adrenal.ipynb  full_report_nodule.ipynb  full_report_vessel.ipynb  main.py  plot_models.ipynb
scripts/annotate/: main.py
scripts/download/: README.md  main.py
scripts/preprocess/: README.md  main.py  preprocess.sbatch
scripts/train/: .gitignore  main.py  show_image.ipynb  train_cnn_baseline.sbatch
scripts/yandex_disk_download/: download.sbatch  main.py
src/: __init__.py  utils.py
src/datasets/: __init__.py  default_dataset.py  one_by_one_dataset.py  random_dataset.py  single_dataset.py  stacked_dataset.py
src/models/: __init__.py  _liquid_baseline.py  _lstm_baseline.py  base.py  baseline.py  cnn_3d_conv_baseline.py  cnn_baseline.py  inception3.py  liquid_baseline.py  lstm_baseline.py  mnist_cnn_baseline.py  mnist_liquid_baseline.py  mnist_lstm_baseline.py  resnet18.py
src/tilers/: deep_zoom_image_tiler.py  deep_zoom_static_tiler.py  tile_worker.py  utils.py
(+156 files in other folders)
